# special-agent-ops

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: safety-checks.yml  tests.yml
docs/: AGENT_INTEGRATIONS.md  PROVENANCE.md  ROADMAP.md  SECURITY_MODEL.md  THREAT_MODEL.md  agent-roster.md  approval-gates.md  branch-protection.md  ci-safety-checks.md  launch-checklist.md  mission-flow.md  public-vs-private-repos.md  risk-levels.md  what-this-is.md  workflow-examples.md
docs/demo/: README_DEMO_SCRIPT.md
examples/: mission_card_example.md
prompts/: builder-agent.md  codex-reviewer-agent.md  diff-explainer-agent.md  no-secrets-agent.md  planner-agent.md  release-manager-agent.md  rollback-agent.md  safety-gate-agent.md  test-runner-agent.md
sao/: __init__.py  cli.py
sao/blackbox/: seal.py  (+13 more)
scripts/: check-secrets.ps1  check-secrets.sh  safety-gate.py
templates/: AGENT_RULES.md  CODEX_REVIEW.md  HANDOFF_REPORT.md  MISSION_BRIEF.md  PR_CHECKLIST.md  SAFE_REPO_BOUNDARIES.md  sao-provenance-issuer.yml  sao-witness.yml  verify-pr.yml
tests/: conftest.py  test_anchor.py  test_archive_security.py  test_attest.py  test_blame.py  test_browser_verify.py  test_checkpoint.py  test_ci_issue.py  test_cli.py  test_compressor.py  test_envelope.py  test_flightplan.py  test_git_tools.py  test_ledger.py  test_mcp_server.py  test_pr_report.py  test_qr_payload.py  test_recorder.py  test_seal.py  test_seal_card.py  test_ui_smoke.py  test_verify_pr.py  test_witness.py
(+17 files in other folders)
