[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "special-agent-ops"
version = "0.1.0"
description = "Black box recorder for AI coding agent sessions."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "qrcode[pil]",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
# After `pip install -e .` you can use `sao run ...` directly.
sao = "sao.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sao*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
